# microsoft-agent-framework

./: README.md  main.py  pyproject.toml
Experiments-01/: apps.py  gemini_client.py  schemas.py
Experiments-02/: agent.py  gemini_client.py  schemas.py  stremlit.py
Experiments-03/: test_01.py
Notes/: a-Inroduction.md  b-Langchain-vs-autogen-vs-maf-comparison.md
