[project]
name = "microsoft-agent-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agent-framework>=1.3.0",
    "agent-framework-core>=1.3.0",
    "google-genai>=2.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
